--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   },
   "homepage": "https://github.com/wonderpush/wonderpush-webplugin-tag-switch#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
     "gulp-clean-css": "^3.4.2",
     "gulp-copy": "^1.0.0",
+    "gulp-css-base64": "^1.3.4",
     "gulp-git": "^2.4.1",
     "gulp-header": "^1.8.8",
     "gulp-jsdoc3": "^1.0.1",
